--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,24 +1,21 @@
 name: Run rakuTests
 
-on:
-  workflow_dispatch: # Manual trigger
+on: [workflow_dispatch]
 
 jobs:
-  test:
+  run_tests:
     runs-on: macos-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3 # Updated to the latest version
 
-    - name: Set up Xcode
-      uses: maxim-lobanov/setup-xcode@v2
-      with:
-        xcode-version: latest
+    - name: Select Xcode
+      run: sudo xcode-select -switch /Applications/Xcode_13.0.app && /usr/bin/xcodebuild -version
 
     - name: Install dependencies
       run: swift package resolve
 
     - name: Run tests
-      run: xcodebuild test -project raku/raku.xcodeproj -scheme raku -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
+      run: xcodebuild test -scheme raku -project raku/raku.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
 
